# scenario-manager

./: .gitignore  CHANGELOG.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: bump-version.yml  django.yml
backend/: .dockerignore  Dockerfile  docker-entrypoint.sh  example.env  pyenv.yml  requirements.txt  ruff.toml
backend/app/: admin.py  forms.py  models.py  parsers.py  renderers.py  serializers.py  storage.py  urls.py  validators.py  views.py
backend/app/admin/: CategoryInline.py  EventGroupInline.py  HeaderInline.py  MediaInline.py  ProfileInline.py  ScenarioAdmin.py  ScenarioInitInline.py  SceneInitInline.py  SceneInline.py  TriggerInline.py  VocalsInline.py  __init__.py  forms.py
backend/app/fixtures/: users.json
backend/app/migrations/: 0001_initial.py
backend/app/models/: Avatar.py  Cardiac.py  Category.py  Control.py  Event.py  EventGroup.py  File.py  General.py  Header.py  Init.py  MediaFile.py  Profile.py  Respiration.py  Scenario.py  Scene.py  Summary.py  Timeout.py  Title.py  Trigger.py  VocalFile.py  __init__.py
backend/app/serializers/: AvatarSerializer.py  CardiacSerializer.py  CategorySerializer.py  ControlSerializer.py  EventGroupSerializer.py  EventSerializer.py  FileSerializer.py  GeneralSerializer.py  HeaderSerializer.py  InitSerializer.py  MediaSerializer.py  ProfileSerializer.py  RespirationSerializer.py  (+8 more)
backend/backend/: settings.py  urls.py
docs/: main-megacode.xml  main-pneumonia.xml  main-sepsis.xml  scenario.erd
frontend/: README.md  package-lock.json  package.json
(+14 files in other folders)
